# seahelm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ghostty.h  project.yml  run.sh  run_ui_tests.sh  run_visual_test.sh  seahelm-Info.plist  zmx-cleanup.sh
Benchmarks/: PerformanceTests.swift
IntegrationTests/: TerminalFullscreenVisualTest.swift
Resources/: ghostty.conf
Tests/: ActivityEventExtractorTests.swift  ActivityEventPipelineTests.swift  ActivityEventTests.swift  ActivityFeedIntegrationTests.swift  ActivityFeedRendererTests.swift  AgentHeadActivityEventTests.swift  AgentHeadExternalTests.swift  AgentHeadTests.swift  AgentHeadTransitionTests.swift  AgentSessionRefTests.swift  AgentTypeTests.swift  BackendResolverTests.swift  BridgeCardModelTests.swift  BridgeCommandParserTests.swift  BridgeCommandRouterTests.swift  BridgeConfirmFlowTests.swift  CabinGroupingTests.swift  CabinPathNavigationTests.swift  CabinSidePanelViewControllerTests.swift  CabinStatusAggregatorTests.swift  CabinTaskStoreTests.swift  CabinTitleResolverTests.swift  ChatSelectionCommandTests.swift  ChoiceOptionParserTests.swift  ChromeLayoutMetricsTests.swift  ChromeLayoutStateTests.swift  ChromeTitlebarRegionTests.swift  ClaudeStatuslineBridgeInstallerTests.swift  (+129 more)
seahelm-watch-fw/main/: CMakeLists.txt  idf_component.yml  main.cpp  sh_config.c  sh_config.h  sh_crypto.c  sh_crypto.h  sh_data.c  sh_data.h  sh_font_cn_20.c  sh_font_cn_26.c  sh_font_cn_34.c  sh_font_num_96.c  sh_mqtt.c  sh_mqtt.h  sh_theme.h  sh_ui.c  sh_ui.h  sh_wifi.c  sh_wifi.h
seahelm-watch-fw/main/fonts/: README.md
(+413 files in other folders)
